src/test/ui/panic-handler/panic-handler-duplicate.stderr
error[E0152]: duplicate lang item found: `panic_impl`.
  --> $DIR/panic-handler-duplicate.rs:15:1
   |
LL | / fn panic2(info: &PanicInfo) -> ! {
LL | |     loop {}
LL | | }
   | |_^
   |
note: first defined here.
  --> $DIR/panic-handler-duplicate.rs:10:1
   |
LL | / fn panic(info: &PanicInfo) -> ! {
LL | |     loop {}
LL | | }
   | |_^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0152`.
